# data_structure

./: .gitignore  CMakeLists.txt  README.md
inc/common/: io_utils.h
llist/: CMakeLists.txt
llist/inc/: linked_list.h  list_node.h  status_code.h
llist/src/: linked_list.c  list_node.c
lstack/: CMakeLists.txt
lstack/inc/: linked_stack.h
lstack/src/: linked_stack.c
test/llist/: llist_test.c
test/lstack/: lstack_test.c
